base/guacamole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guacamole
spec:
  selector:
    app: guacamole
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
