base/guacamole/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
spec:
  rules:
    - host: "gateway.cube.local"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: guacamole
              port:
                number: 8080
